[workspace]
resolver = "2"
members = [
  "contracts/contributor_registry",
  "contracts/crowdfund_vault",
  "contracts/lumen_token",
  "contracts/matching_pool",
  "contracts/notification_interface",
  "contracts/project_registry",
  "contracts/protocol_registry",
  "contracts/reentrancy-guard",
  "contracts/upgradable-contract",
  "contracts/vesting-wallet",
  "contracts/lumenpulse-curation",
  "contracts/pricing_adapter",
  "contracts/treasury",
  "contracts/idempotency-guard",
  "contracts/yield_vault",
  "contracts/feature_flags"
]
exclude = ["contracts/tests"]

[workspace.dependencies]
soroban-sdk = "23"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
