[package]
name = "crowdfund_vault"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
notification_interface = { path = "../notification_interface" }
reentrancy-guard = { path = "../reentrancy-guard" }
idempotency-guard = { path = "../idempotency-guard" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"

[features]
testutils = ["soroban-sdk/testutils"]
