[package]
name = "treasury"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
reentrancy-guard = { path = "../reentrancy-guard" }
idempotency-guard = { path = "../idempotency-guard" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
